--- a/src/admin/js/react/components/welcome/style.scss
+++ b/src/admin/js/react/components/welcome/style.scss
@@ -57,13 +57,13 @@
   margin-bottom: 15px;
   margin-top: 30px;
 }
-.ncpi .pi-tabs-content #pi-welcome p {
+.ncpi .pi-welcome-tabs-content #pi-welcome p {
   margin-bottom: 70px;
 }
-.ncpi .pi-tabs-content #pi-finished p {
+.ncpi .pi-welcome-tabs-content #pi-finished p {
   margin-bottom: 45px;
 }
-.ncpi .pi-tabs-content #pi-finished .pi-buttons a {
+.ncpi .pi-welcome-tabs-content #pi-finished .pi-buttons a {
   padding: 15px 20px;
   font-weight: 600;
   border-radius: 8px;
@@ -74,14 +74,14 @@
   margin-left: 10px;
   display: inline-block;
 }
-.ncpi .pi-tabs-content #pi-finished .pi-buttons a:first-child {
+.ncpi .pi-welcome-tabs-content #pi-finished .pi-buttons a:first-child {
   margin-left: 0px;
 }
 .ncpi .pi-tab-content #pi-brand img {
   text-align: center;
   margin-bottom: 5px;
 }
-.ncpi .pi-tab-content #pi-brand .upload {
+.ncpi .pi-tab-content #pi-brand .pi-upload {
   font-size: 19px;
   margin-top: 30px;
   margin-bottom: 40px;
